--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ header {
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 4rem;
+  gap: 2rem;
   margin-bottom: 0.6rem;
 }
 
@@ -31,9 +31,9 @@ h1 {
 
 .head_title {
   font-weight: 500;
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   display: inline-block;
-  padding: 1rem 0.8rem;
+  padding: 0.8rem 0.6rem;
   border-radius: 0.8rem;
   background-color: #d4e09b;
   border: none;
@@ -56,8 +56,31 @@ h1 {
   background-color: #c3d370;
 }
 
+.sliders {
+  display: flex;
+  flex-direction: column;
+  gap: 0.8rem;
+  width: 12rem;
+}
+
+.slider_text {
+  font-size: 1.2em;
+  font-weight: 500;
+}
+
+.slider {
+  float: right;
+}
+
+.slider:hover {
+  cursor: pointer;
+}
+
 .input_msg {
   font-size: 1.4rem;
+  display: inline-block;
+  margin-left: 0.4rem;
+  padding-bottom: 1.8em;
 }
 
 .divider {
