--- a/style.css
+++ b/style.css
@@ -17,8 +17,15 @@ header {
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 2rem;
+  margin-right: 1rem;
   margin-bottom: 0.6rem;
+}
+
+.header_left {
+  gap: 2rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 h1 {
@@ -29,19 +36,15 @@ h1 {
   color: #a44a3f;
 }
 
-.head_title {
+.gen_arr {
+  background-color: #a44a3f;
+  color: #f6f4d2;
   font-weight: 500;
   font-size: 1.4rem;
   display: inline-block;
   padding: 0.8rem 0.6rem;
   border-radius: 0.8rem;
-  background-color: #d4e09b;
   border: none;
-}
-
-.gen_arr {
-  background-color: #a44a3f;
-  color: #f6f4d2;
 }
 
 .gen_arr:hover,
@@ -50,30 +53,47 @@ h1 {
   cursor: pointer;
 }
 
-.sort:hover,
-.sort:active {
-  cursor: default;
-  background-color: #c3d370;
-}
-
-.sliders {
+.slider_container {
   display: flex;
   flex-direction: column;
-  gap: 0.8rem;
-  width: 12rem;
+  gap: 0.4rem;
 }
 
 .slider_text {
-  font-size: 1.2em;
+  font-size: 1.2rem;
   font-weight: 500;
 }
 
 .slider {
-  float: right;
+  width: 7rem;
 }
 
 .slider:hover {
   cursor: pointer;
+}
+
+.header_right {
+  gap: 1rem;
+  margin-left: auto;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.sort {
+  font-weight: 500;
+  font-size: 1.1rem;
+  display: inline-block;
+  padding: 0.8rem 0.6rem;
+  border-radius: 0.8rem;
+  background-color: #d4e09b;
+  border: none;
+}
+
+.sort:hover,
+.sort:active {
+  cursor: default;
+  background-color: #c3d370;
 }
 
 .input_msg {
